# PiccoloLearning

./: .gitignore  CMakeLists.txt  build_macos.sh
engine/: CMakeLists.txt
engine/asset/: Readme.md
engine/asset-test/test/: mat2.json  mat3.json  mat4.json
engine/asset-test/world/: test01.world.json
engine/asset/global/: rendering.global.json
engine/asset/global/skybox/: default_irradiance_map.skybox.json  default_specular_map.skybox.json  sky1_specular_map.skybox.json  sky2_specular_map.skybox.json
engine/asset/level/: 1-1.level.json  1-2.level.json
engine/asset/objects/environment/basic/: bunny.object.json  capsule.object.json  convexmesh.object.json  cube.object.json
engine/asset/objects/environment/teapot/: teapot.object.json
engine/asset/texture/sky/sky1/: cube-mapping-skybox_back_X-.hdr  cube-mapping-skybox_bottom_Z-.hdr  cube-mapping-skybox_front_X+.hdr  cube-mapping-skybox_left_Y+.hdr  cube-mapping-skybox_right_Y-.hdr  cube-mapping-skybox_top_Z+.hdr
engine/asset/texture/sky/sky2/: landscape-watercolor-sky_back_X-.hdr  landscape-watercolor-sky_bottom_Z-.hdr  landscape-watercolor-sky_front_X+.hdr  landscape-watercolor-sky_left_Y+.hdr  landscape-watercolor-sky_right_Y-.hdr  landscape-watercolor-sky_top_Z+.hdr
engine/asset/window/: config.window.json
engine/asset/world/: hello.world.json  test01.world.json
engine/configs/deployment/: PiccoloPlayGround.ini
engine/configs/development/: PiccoloEditor.ini  PiccoloPlayGround.ini
engine/configs/vfs/: config.vfs.json
engine/configs/window/: config.window.json
engine/shader/: CMakeLists.txt
engine/shader/glsl/basic/: simple_compute.comp
engine/source/: .gitignore
engine/source/editor/: CMakeLists.txt
engine/source/editor/include/: vk_app.h
engine/source/editor/source/: main.cpp
engine/source/meta_parser/: CMakeLists.txt
engine/source/meta_parser/parser/generator/: reflection_generator.cpp
engine/source/meta_parser/parser/meta/: meta_utils.cpp  meta_utils.h
engine/source/precompile/: precompile.cmake
engine/source/runtime/: CMakeLists.txt  engine.cpp  engine.h
engine/source/runtime/core/algorithm/: lru_cache.h
engine/source/runtime/core/base/: crc.cpp  crc.h  hash.h  instanceof.h  macro.h  string_utils.cpp  string_utils.h
engine/source/runtime/core/container/: linked_list.cpp  linked_list.h  rb_tree.cpp  rb_tree.h
engine/source/runtime/core/math/: axis_aligned.cpp  axis_aligned.h  math.cpp  math.h  matrix2.cpp  matrix2.h  matrix3.cpp  matrix3.h  matrix4.cpp  matrix4.h  matrixN.h  vector2.h  vector3.h  vector4.h  vectorN.h
engine/source/runtime/core/memory/: Readme.md  allocator.h  buddy_allocator.cpp  buddy_allocator.h  cache_aligned_allocator.h  free_list_allocator.cpp  free_list_allocator.h  free_tree_allocator.cpp  free_tree_allocator.h  huge_page_allocator.h  linear_allocator.cpp  linear_allocator.h  memory.h  memory_arena.h  memory_pool.h  simple_allocator.h  slab_allocator.cpp  slab_allocator.h  stack_allocator.cpp  stack_allocator.h
engine/source/runtime/core/string/: string_utils.cpp  string_utils.h
engine/source/runtime/core/thread/: thread_pool.h
engine/source/runtime/function/global/: global_context.cpp  global_context.h
engine/source/runtime/function/input/: input_system.cpp  input_system.h
engine/source/runtime/function/physics/: physics_config.h  physics_manager.cpp  physics_manager.h  physics_scene.cpp  physics_scene.h
engine/source/runtime/function/render/: light.h  render_camera.cpp  render_camera.h  render_common.h  render_data.h  render_debug_config.h  render_entity.h  render_helper.cpp  render_helper.h  render_mesh.h  render_object.h  render_scene.cpp  render_scene.h  render_system.cpp  render_system.h  render_type.h  window_system.cpp  window_system.h
engine/source/runtime/platform/file_system/: file_base.h  file_system.cpp  file_system.h  (+3 more)
(+85 files in other folders)
